--- a/advs/templates/app_auth/login.html
+++ b/advs/templates/app_auth/login.html
@@ -40,7 +40,7 @@
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">
+      <a class="nav-link" href="{% url 'logout' %}">
         <span style="font-weight: bold;">Выйти</span>
       </a>
     </li>
@@ -53,12 +53,18 @@
       </div>
     </div>
   </div>
+      {% if error %}
+  <div class="col-sm-4 offset-4 w-25">
+    <div class="form-label bg-warning" style="margin: 10px 0px;">{{ error }}</div>
+  </div>
+  {% endif %}
     <form method="post">
+      {% csrf_token %}
       <div class="row mb-3">
         <div class="col">
           <label class="col-sm-4 col-form-label offset-4">Username</label>
           <div class="col-sm-4 offset-4 w-25">
-            <input type="text" class="form-control form-control-lg">
+            <input type="text" name="username" id="username" class="form-control form-control-lg">
           </div>
         </div>
       </div>
@@ -66,7 +72,7 @@
         <div class="col">
           <label class="col-sm-4 col-form-label offset-4">Password</label>
           <div class="col-sm-4 offset-4 w-25">
-            <input type="password" class="form-control form-control-lg">
+            <input type="password" name="password" id="password" class="form-control form-control-lg">
           </div>
         </div>
       </div>
