--- a/advs/templates/app_advs/index.html
+++ b/advs/templates/app_advs/index.html
@@ -107,22 +107,22 @@
     <div class="card mb-2" style="max-width: 1200px; margin-top: 20px;">
       <div class="row g-0">
         <div class="col-md-4">
-          <a href="{{ get_absolute_url }}" class="nav-link">
+          <a href="{{ adv.get_absolute_url }}" class="nav-link">
             <img src="{% if adv.image %}{{ adv.image.url }}{% else %}{% static 'img/adv.png' %}{%endif%}" class="img-fluid rounded-start" alt="Card title">
           </a>
         </div>
         <div class="col-md-8">
           <div class="card-body">
             <h5 class="card-title">
-              <a href="{{ get_absolute_url }}" class="nav-link"><strong>{{adv.title}}</strong></a>
+              <a href="{{ adv.get_absolute_url }}" class="nav-link"><strong>{{ adv.title }}</strong></a>
             </h5>
-            <a href="{{ get_absolute_url }}" class="nav-link">
+            <a href="{{ adv.get_absolute_url }}" class="nav-link">
               <p class="card-text">
                 {{adv.description}}
               </p>
-              <span>Автор: {{adv.user}}</span>
-              <p class="card-text"><small class="text-muted">Размещено: {{adv.created_at}}</small></p>
-              <p>Цена: {{adv.price}}</p>
+              <span>Автор: {{ adv.user }}</span>
+              <p class="card-text"><small class="text-muted">Размещено: {{ adv.created_at }}</small></p>
+              <p>Цена: {{ adv.price }}</p>
             </a>
           </div>
         </div>
